@@ -4,6 +4,7 @@ New:     Basic printing support for assembly listing window.
 Fix:     1942893 - Assembler listing window is too narrow
 Fix:     2462607 - Keypad should not insert instruction code while debugging
 Fix:     2582426 - syntax highlighting for sp register (stack pointer)
+Fix:     2462657 - Example programs must be read-only on Windows
 
 GNUSim8085 1.3.5 (24 Dec 2008)
 
